# HR-Pulse_Backend_ML

./: .gitignore  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: db.py  db_loader.py  main.py  models.py  ner_extractor.py  schemas.py  tracing.py
machine learning/: Dockerfile  app.ipynb
tests/: test_auth.py
